apps/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.sesaclab.site
      http:
        paths:
          - path: /apigateway/
            pathType: Prefix
            backend:
              service:
                name: apigateway-service
                port:
                  number: 8080
          - path: /grafana/
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
